--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -11,9 +11,16 @@ body {
 }
 
 h1 {
-  color: rgb(0, 13, 255);
-  border-radius: 20px;
-  padding: 10px 6px 10px 6px;
+  color: black;
+  border-radius: 50px;
+  padding: 10px 6px 10px 12px;
+  z-index: 100;
+}
+
+.express {
+  color: darkblue;
+  font-weight: bold;
+  font-family: Monaco;
 }
 
 button {
@@ -23,13 +30,44 @@ button {
   color: rgb(0, 13, 255);
 }
 
-.drop-down-menu {
+.drop-down-menu,
+.drop-down-menu2 {
   border-radius: 14px;
   border: 0.5px solid lightpink;
   position: absolute;
   top: 0;
   left: 450px;
   width: 200px;
+  background-color: #f9f9f9;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  transition: padding 0.15s, width 0.15s, color, 0.15s, background-color 0.15s;
+}
+.drop-down-menu2 {
+  top: 35px;
+}
+
+.drop-down-menu:hover,
+.drop-down-menu2:hover {
+  padding-bottom: 1rem;
+  animation: spin 5s ease-in-out infinite;
+  cursor: pointer;
+}
+
+.drop-down-menu:active,
+.drop-down-menu2:active {
+  color: white;
+  background-color: pink;
+  cursor: pointer;
+}
+
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 input {
@@ -72,23 +110,23 @@ input {
   width: 800px;
   margin-bottom: 12px;
 
-  border:solid 5vmin rgb(148, 74, 26);
-  border-bottom-color:rgb(141, 42, 24);
-  border-left-color:rgba(148, 75, 26, 0.306);
-  border-radius:2px;
-  border-right-color:rgba(148, 75, 26, 0.306);
-  border-top-color:rgb(141, 42, 24);
-  box-shadow:0 0 5px 0 rgba(0,0,0,.25) inset, 0 5px 10px 5px rgba(0,0,0,.25);
-  box-sizing:border-box;
-  height:80vh;
-  padding:8vmin;
+  border: solid 5vmin rgb(148, 74, 26);
+  border-bottom-color: rgb(141, 42, 24);
+  border-left-color: rgba(148, 75, 26, 0.306);
+  border-radius: 2px;
+  border-right-color: rgba(148, 75, 26, 0.306);
+  border-top-color: rgb(141, 42, 24);
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25) inset,
+    0 5px 10px 5px rgba(0, 0, 0, 0.25);
+  box-sizing: border-box;
+  height: 80vh;
+  padding: 8vmin;
 }
 
 .body {
   font-size: 30px;
   word-wrap: break-word;
   text-align: center;
-
 }
 
 .title {
