--- a/client/css/styles.css
+++ b/client/css/styles.css
@@ -35,12 +35,13 @@ button {
   border-radius: 14px;
   border: 0.5px solid lightpink;
   position: absolute;
-  top: 0;
+  top: 6px;
   left: 450px;
   width: 200px;
-  background-color: #f9f9f9;
+  background-color: lightpink;
+  color: darkblue;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  transition: padding 0.15s, width 0.15s, color, 0.15s, background-color 0.15s;
+  transition: width 0.15s, color, 0.15s, background-color 0.15s;
 }
 .drop-down-menu2 {
   top: 35px;
@@ -48,7 +49,6 @@ button {
 
 .drop-down-menu:hover,
 .drop-down-menu2:hover {
-  padding-bottom: 1rem;
   animation: spin 5s ease-in-out infinite;
   cursor: pointer;
 }
